--- a/skyfall.bib
+++ b/skyfall.bib
@@ -16,7 +16,7 @@ volume={?},
 pages={?}}
 
 %[3] Sara Mohamed, Vincent Favrod, Roberta Antonini Philippe, and Dennis Hauw, “The Situated Management of Safety during Risky Sport: Learning from Skydivers’ Courses of Experience”, J Sports Sci Med, 2015 May.
-@book{mohamedXsituated,
+@article{mohamedXsituated,
 author={Mohamed, Sara and Favrod, Vincent and Philippe, Roberta Antonini and Hauw, Dennis},
 year={2015},
 title={The situated management of safety during risky sport: learning from skydivers' courses of experience},
