--- a/ew401-fa2020-skyfall.tex
+++ b/ew401-fa2020-skyfall.tex
@@ -269,6 +269,6 @@ Figure 13 MIDN Sweeney hard at work during bench demo preparations
 %[5] W. Wibisono, D. N. Arifin, B. A. Pratomo, T. Ahmad, and R. M. Ijtihadie, “Falls Detection and Notification System Using Tri-axial Accelerometer and Gyroscope Sensors of a Smartphone.” 2014 April
 \nocite{*}
 \bibliographystyle{IEEEtran}
-\bibliography{IEEEabrv,skyfall.bib}
+\bibliography{IEEEabrv,references/skyfall.bib}
 \end{document}
 
