--- a/ew401-fa2020-skyfall.tex
+++ b/ew401-fa2020-skyfall.tex
@@ -11,6 +11,7 @@
 \coursenumber{EW401}
 \student{MIDN 1/C L.~Donaldson, MIDN 1/C J.~Sweeney,\\MIDN 1/C L.~Modica, and MIDN 1/C D.~Tarnawski}
 \advisor{Assistant Professor D. Evangelista}
+\contactinfo{\emph{Lindsaygrace2017@gmail.com}}
 
 \title{Skyfall}
 \author{MIDN 1/C L.~Donaldson, J.~Sweeney, L.~Modica, and D.~Tarnawski}
